added node as engine & start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "node-fetch": "^2.6.1"
+  },
+  "engines": {
+    "node": "v12.x" 
   }
 }
